[gd_scene load_steps=19 format=3 uid="uid://csx7n2d2al0a"]

[ext_resource type="Texture2D" uid="uid://bk5u0kj8sqlqw" path="res://Sprites/Background.png" id="1_6tcyx"]
[ext_resource type="Texture2D" uid="uid://37jxkyou1hqo" path="res://Sprites/Tileset.png" id="1_mx6sy"]
[ext_resource type="Script" path="res://World.gd" id="1_oeunc"]
[ext_resource type="FontFile" uid="uid://6tdxe0ym2ijw" path="res://Assets/BitPotionExt.ttf" id="2_xudtc"]
[ext_resource type="PackedScene" uid="uid://ds16i71cxshkf" path="res://Scenes/load_zone.tscn" id="3_flmw7"]
[ext_resource type="Script" path="res://TileMap.gd" id="4_o2qpm"]
[ext_resource type="PackedScene" uid="uid://q00atex0a876" path="res://Scenes/interactable_1.tscn" id="5_d64d4"]
[ext_resource type="Texture2D" uid="uid://cs0uqfqieqejd" path="res://Sprites/SelectedTile.png" id="7_cl0ie"]
[ext_resource type="PackedScene" uid="uid://cmna25e07o33t" path="res://Instances/player.tscn" id="8_oq2d0"]
[ext_resource type="Script" path="res://Scenes/Label.gd" id="9_xcxnb"]
[ext_resource type="PackedScene" uid="uid://dd66y5icumiay" path="res://Instances/enemy.tscn" id="12_fw7c1"]

[sub_resource type="Environment" id="Environment_gopqu"]
background_mode = 3
adjustment_enabled = true

[sub_resource type="AtlasTexture" id="AtlasTexture_oplyd"]
atlas = ExtResource("1_mx6sy")
region = Rect2(60, 10, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm2"]
atlas = ExtResource("1_mx6sy")
region = Rect2(50, 10, 10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpcpd"]
size = Vector2(8, 41)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cfwj1"]
texture = ExtResource("1_mx6sy")
texture_region_size = Vector2i(10, 10)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
10:6/0 = 0
10:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:6/0/physics_layer_0/angular_velocity = 0.0
11:6/0 = 0
11:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:6/0/physics_layer_0/angular_velocity = 0.0
9:7/0 = 0
9:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:7/0/physics_layer_0/angular_velocity = 0.0
10:7/0 = 0
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
11:7/0 = 0
11:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:7/0/physics_layer_0/angular_velocity = 0.0
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)
9:8/0 = 0
9:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:8/0/physics_layer_0/angular_velocity = 0.0
10:8/0 = 0
10:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:8/0/physics_layer_0/angular_velocity = 0.0
11:8/0 = 0
11:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:8/0/physics_layer_0/angular_velocity = 0.0
1:10/0 = 0
1:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:10/0/physics_layer_0/angular_velocity = 0.0
1:11/0 = 0
1:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:11/0/physics_layer_0/angular_velocity = 0.0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, 5, -5, 5, 5, -5, 5)

[sub_resource type="TileSet" id="TileSet_giywl"]
tile_size = Vector2i(10, 10)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_cfwj1")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u3lmf"]
light_mode = 1

[node name="World" type="Node2D"]
texture_filter = 1
script = ExtResource("1_oeunc")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gopqu")

[node name="Other" type="Node" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="Other"]
color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="ChangeRoomTimer" type="Timer" parent="Other"]
wait_time = 5.0

[node name="Props" type="Node2D" parent="."]

[node name="HDoor" type="Node2D" parent="Props"]
position = Vector2(-12, -54)

[node name="SideL" type="Sprite2D" parent="Props/HDoor"]
position = Vector2(-10, 0)
texture = SubResource("AtlasTexture_oplyd")

[node name="Main" type="Sprite2D" parent="Props/HDoor"]
texture = SubResource("AtlasTexture_8erm2")

[node name="SideR" type="Sprite2D" parent="Props/HDoor"]
position = Vector2(10, 0)
texture = SubResource("AtlasTexture_oplyd")

[node name="CurrentScene" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CurrentScene"]
zoom = Vector2(7, 7)

[node name="Void" type="Sprite2D" parent="CurrentScene"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(2.45312, 1.20312)
texture = ExtResource("1_6tcyx")

[node name="Background" type="Sprite2D" parent="CurrentScene"]
scale = Vector2(2.45312, 0.914902)
texture = ExtResource("1_6tcyx")

[node name="LoadingZones" type="Node2D" parent="."]

[node name="LoadZone" parent="LoadingZones" instance=ExtResource("3_flmw7")]
position = Vector2(128, -9)

[node name="LoadZone2" parent="LoadingZones" instance=ExtResource("3_flmw7")]
position = Vector2(153, -9)
trigger_direction = Vector2i(-1, 0)

[node name="CollisionShape2D" parent="LoadingZones/LoadZone2" index="0"]
position = Vector2(-16, 0.5)
shape = SubResource("RectangleShape2D_qpcpd")

[node name="Dialogues" type="Node2D" parent="."]

[node name="Interactable1" parent="Dialogues" instance=ExtResource("5_d64d4")]
position = Vector2(23, 41)
interaction_text = "We are small."

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(3, 1)
tile_set = SubResource("TileSet_giywl")
format = 2
layer_0/tile_data = PackedInt32Array(-65550, 65536, 2, -14, 65536, 1, 65522, 65536, 1, -65549, 65536, 2, -13, 65536, 2, 65523, 65536, 1, 131059, 131072, 3, -65548, 65536, 2, -12, 65536, 2, 65524, 196608, 1, 131060, 65536, 1, -65547, 131072, 1, -11, 196608, 1, 65525, 196608, 1, 131061, 131072, 3, -65546, 131072, 3, -10, 196608, 1, 65526, 196608, 1, 131062, 131072, 3, -65545, 131072, 3, -9, 131072, 1, 65527, 131072, 1, 131063, 131072, 3, -65544, 131072, 3, -8, 131072, 3, 65528, 131072, 3, 131064, 131072, 3, -65543, 131072, 3, -7, 131072, 3, 65529, 131072, 3, 131065, 131072, 3, -65542, 131072, 3, -6, 131072, 3, 65530, 131072, 3, 131066, 131072, 3, -65541, 131072, 3, -5, 131072, 3, 65531, 131072, 3, 131067, 131072, 3, -65540, 131072, 3, -4, 131072, 3, 65532, 131072, 3, 131068, 131072, 3, -65539, 65536, 1, -3, 131072, 1, 65533, 131072, 1, 131069, 131072, 3, 196605, 131072, 3, 262141, 131072, 3, -65538, 65536, 1, -2, 131072, 1, 65534, 196608, 1, 131070, 196608, 1, 196606, 131072, 3, -65537, 131072, 3, -1, 131072, 3, 65535, 131072, 3, 131071, 131072, 3, 196607, 131072, 3, 262143, 131072, 1, -131072, 131072, 3, -65536, 131072, 3, 0, 131072, 3, 65536, 131072, 3, 131072, 131072, 3, 196608, 131072, 1, -131071, 131072, 3, -65535, 131072, 3, 1, 131072, 3, 65537, 131072, 3, 131073, 131072, 3, 196609, 131072, 1, -131070, 131072, 3, -65534, 131072, 3, 2, 131072, 3, 65538, 131072, 3, 131074, 131072, 3, 196610, 131072, 1, -131069, 131072, 3, -65533, 131072, 3, 3, 131072, 3, 65539, 131072, 3, 131075, 131072, 3, 196611, 131072, 1, -131068, 131072, 3, -65532, 131072, 3, 4, 131072, 3, 65540, 131072, 3, 131076, 131072, 3, 196612, 131072, 1, -131067, 131072, 3, -65531, 131072, 3, 5, 131072, 3, 65541, 131072, 3, 131077, 131072, 3, -131066, 131072, 3, -65530, 131072, 3, 6, 131072, 3, 65542, 131072, 3, 131078, 131072, 3, 196614, 131072, 3, -131065, 131072, 3, -65529, 131072, 3, -131064, 131072, 3, -65528, 131072, 3, -131063, 131072, 3, -65527, 131072, 3, -131062, 131072, 3, -65526, 131072, 3, -131061, 131072, 3, -65525, 131072, 3, -131060, 131072, 3, -65524, 131072, 3, -131086, 65536, 2, -262157, 65536, 2, -196621, 196608, 2, -131085, 196608, 2, -262156, 65536, 2, -196620, 196608, 2, -131084, 196608, 2, -262155, 65536, 2, -196619, 131072, 3, -131083, 131072, 3, -262154, 65536, 2, -196618, 131072, 3, -131082, 131072, 3, -262153, 65536, 2, -196617, 131072, 3, -131081, 131072, 3, -262152, 65536, 2, -196616, 131072, 3, -131080, 131072, 3, -262151, 65536, 2, -196615, 131072, 3, -131079, 131072, 3, -262150, 65536, 2, -196614, 131072, 3, -131078, 131072, 3, -262149, 65536, 2, -196613, 131072, 3, -131077, 131072, 3, -262148, 65536, 1, -196612, 65536, 1, -131076, 131072, 3, -262147, 131072, 1, -196611, 65536, 1, -131075, 65536, 1, -262146, 131072, 1, -196610, 65536, 1, -131074, 65536, 1, -262145, 65536, 1, -196609, 131072, 3, -131073, 131072, 1, -327680, 65536, 1, -262144, 131072, 3, -196608, 131072, 3, -327679, 65536, 2, -262143, 131072, 3, -196607, 131072, 3, -327678, 65536, 2, -262142, 131072, 3, -196606, 131072, 3, -327677, 65536, 2, -262141, 131072, 3, -196605, 131072, 3, -327676, 65536, 2, -262140, 131072, 3, -196604, 131072, 3, -327675, 65536, 2, -262139, 131072, 3, -196603, 131072, 3, -327674, 65536, 2, -262138, 131072, 3, -196602, 131072, 3)
layer_1/tile_data = PackedInt32Array(-327694, 196608, 3, -262158, 196608, 3, -196622, 196608, 3, -327693, 196608, 3, -327692, 196608, 3, -327691, 196608, 3, -327690, 196608, 3, -327689, 196608, 3, -327688, 196608, 3, -327687, 196608, 3, -327686, 196608, 3, -327685, 196608, 3, -327684, 196608, 3, -393216, 196608, 3, -393215, 196608, 3, -393214, 196608, 3, -393213, 196608, 3, -393212, 196608, 3, -393211, 196608, 3, -393210, 196608, 3, -393209, 196608, 3, -327673, 196608, 3, -262137, 196608, 3, -196601, 196608, 3, -196600, 196608, 3, -196599, 196608, 3, -196598, 196608, 3, -196597, 196608, 3, -196596, 196608, 3, 7, 196608, 3, 8, 196608, 3, 9, 196608, 3, 10, 196608, 3, 11, 196608, 3, 12, 196608, 3, 65543, 196608, 3, 131079, 196608, 3, 196615, 196608, 3, 262151, 196608, 3, 262150, 196608, 3, 262149, 196608, 3, 196613, 196608, 3, 327676, 196608, 3, 327677, 196608, 3, 327678, 196608, 3, 262142, 196608, 3, 196604, 196608, 3, 262140, 196608, 3, 196594, 196608, 3, 196595, 196608, 3, 196596, 196608, 3, 196597, 196608, 3, 196598, 196608, 3, 196599, 196608, 3, 196600, 196608, 3, 196601, 196608, 3, 196602, 196608, 3, 196603, 196608, 3, 131058, 196608, 3, 327679, 589824, 3, 262144, 589824, 3, 262145, 589824, 3, 262146, 589824, 3, 262147, 589824, 3, 262148, 589824, 3)
script = ExtResource("4_o2qpm")

[node name="Label" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_u3lmf")
offset_left = -132.0
offset_top = 61.0
offset_right = 124.0
offset_bottom = 82.0
theme_override_fonts/normal_font = ExtResource("2_xudtc")
theme_override_font_sizes/normal_font_size = 16
script = ExtResource("9_xcxnb")

[node name="Timer" type="Timer" parent="Label"]
wait_time = 0.05

[node name="DeleteTimer" type="Timer" parent="Label"]
wait_time = 4.0
one_shot = true

[node name="SelectedTile" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2, -4)
texture = ExtResource("7_cl0ie")

[node name="Instances" type="Node2D" parent="."]

[node name="Ally" type="Node2D" parent="Instances"]

[node name="Player" parent="Instances/Ally" instance=ExtResource("8_oq2d0")]

[node name="Enemies" type="Node2D" parent="Instances"]

[node name="Enemy" parent="Instances/Enemies" instance=ExtResource("12_fw7c1")]
position = Vector2(-21, -4)

[node name="Traps" type="Node2D" parent="Instances"]

[connection signal="timeout" from="Other/ChangeRoomTimer" to="." method="_on_change_room_timer_timeout"]
[connection signal="clicked_tile" from="TileMap" to="Instances/Ally/Player" method="_on_tile_map_clicked_tile"]
[connection signal="timeout" from="Label/Timer" to="Label" method="_on_timer_timeout"]
[connection signal="timeout" from="Label/DeleteTimer" to="Label" method="_on_delete_timer_timeout"]
[connection signal="show_selection_tile" from="Instances/Ally/Player" to="." method="_on_player_show_selection_tile"]
[connection signal="stopped_walking" from="Instances/Ally/Player" to="." method="_on_player_stopped_walking"]

[editable path="LoadingZones/LoadZone2"]
